{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 21,
  "lineage": "0e4d3e0e-908d-6fe8-2c29-1005ac465a84",
  "resources": [
    {
      "module": "module.accepter_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:537124953623:instance/i-05bb3a0cca4c030df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bb3a0cca4c030df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006fd07c7e5e9406a",
            "private_dns": "ip-172-16-1-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.168",
            "public_dns": "ec2-54-172-95-178.compute-1.amazonaws.com",
            "public_ip": "54.172.95.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf2e52b5626a01cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cff8309c49acfae4",
            "tags": {
              "Name": "accepter-instance"
            },
            "tags_all": {
              "Name": "accepter-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f3a31059e8f8026"
            ]
          },
          "dependencies": [
            "module.accepter_instance.aws_security_group.instance_sg",
            "module.vpc_accepter.aws_subnet.public_subnet",
            "module.vpc_accepter.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.accepter_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:security-group/sg-02f3a31059e8f8026",
            "description": "Security group for accepter-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f3a31059e8f8026",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "accepter-instance-sg",
            "name_prefix": "",
            "owner_id": "537124953623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "accepter-instance-sg"
            },
            "tags_all": {
              "Name": "accepter-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d281b4e94f1994a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_accepter.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requester_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:537124953623:instance/i-0cca443c569b92dcf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cca443c569b92dcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5e370684bfb7054",
            "private_dns": "ip-10-0-1-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-44-203-94-170.compute-1.amazonaws.com",
            "public_ip": "44.203.94.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03f8efa0da2809b35",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b577a87dad500ea",
            "tags": {
              "Name": "requester-instance"
            },
            "tags_all": {
              "Name": "requester-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3ca89e210f5b7df"
            ]
          },
          "dependencies": [
            "module.requester_instance.aws_security_group.instance_sg",
            "module.vpc_requester.aws_subnet.public_subnet",
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requester_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:security-group/sg-0b3ca89e210f5b7df",
            "description": "Security group for requester-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3ca89e210f5b7df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "requester-instance-sg",
            "name_prefix": "",
            "owner_id": "537124953623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "requester-instance-sg"
            },
            "tags_all": {
              "Name": "requester-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b7dcadd079b515"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_accepter",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:internet-gateway/igw-02cb67a0104646e2f",
            "id": "igw-02cb67a0104646e2f",
            "owner_id": "537124953623",
            "tags": {
              "Name": "accepter-vpc-igw"
            },
            "tags_all": {
              "Name": "accepter-vpc-igw"
            },
            "vpc_id": "vpc-06d281b4e94f1994a"
          },
          "dependencies": [
            "module.vpc_accepter.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_accepter",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:route-table/rtb-0d6cfa4939c81752c",
            "id": "rtb-0d6cfa4939c81752c",
            "owner_id": "537124953623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cb67a0104646e2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "accepter-vpc-public-rt"
            },
            "tags_all": {
              "Name": "accepter-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d281b4e94f1994a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_accepter.aws_internet_gateway.igw",
            "module.vpc_accepter.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_accepter",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d43c22fff5ae4e65",
            "route_table_id": "rtb-0d6cfa4939c81752c",
            "subnet_id": "subnet-0cff8309c49acfae4"
          },
          "dependencies": [
            "module.vpc_accepter.aws_internet_gateway.igw",
            "module.vpc_accepter.aws_route_table.public",
            "module.vpc_accepter.aws_subnet.public_subnet",
            "module.vpc_accepter.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_accepter",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:subnet/subnet-0cff8309c49acfae4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cff8309c49acfae4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537124953623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "accepter-vpc-public"
            },
            "tags_all": {
              "Name": "accepter-vpc-public"
            },
            "vpc_id": "vpc-06d281b4e94f1994a"
          },
          "dependencies": [
            "module.vpc_accepter.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_accepter",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:vpc/vpc-06d281b4e94f1994a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-046d7b11b04da1c5e",
            "default_route_table_id": "rtb-096f934c8bad11290",
            "default_security_group_id": "sg-0711480fdb6b7c035",
            "dhcp_options_id": "dopt-088afe2c2501c9162",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d281b4e94f1994a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096f934c8bad11290",
            "owner_id": "537124953623",
            "tags": {
              "Name": "accepter-vpc"
            },
            "tags_all": {
              "Name": "accepter-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d6cfa4939c81752c179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d6cfa4939c81752c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0d540642f0ba5b734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_accepter.aws_internet_gateway.igw",
            "module.vpc_accepter.aws_route_table.public",
            "module.vpc_accepter.aws_vpc.vpc",
            "module.vpc_peering.aws_vpc_peering_connection.peer",
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b20f95b7d8f980ca3246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b20f95b7d8f980ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0d540642f0ba5b734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_accepter.aws_vpc.vpc",
            "module.vpc_peering.aws_vpc_peering_connection.peer",
            "module.vpc_requester.aws_internet_gateway.igw",
            "module.vpc_requester.aws_route_table.public",
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0d540642f0ba5b734",
            "peer_owner_id": "537124953623",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-06d281b4e94f1994a",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc-peer"
            },
            "tags_all": {
              "Name": "vpc-peer"
            },
            "vpc_id": "vpc-0d9b7dcadd079b515"
          },
          "dependencies": [
            "module.vpc_accepter.aws_vpc.vpc",
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_requester",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:internet-gateway/igw-0aeca5fd6df2c7e8d",
            "id": "igw-0aeca5fd6df2c7e8d",
            "owner_id": "537124953623",
            "tags": {
              "Name": "requester-vpc-igw"
            },
            "tags_all": {
              "Name": "requester-vpc-igw"
            },
            "vpc_id": "vpc-0d9b7dcadd079b515"
          },
          "dependencies": [
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_requester",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:route-table/rtb-0b20f95b7d8f980ca",
            "id": "rtb-0b20f95b7d8f980ca",
            "owner_id": "537124953623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aeca5fd6df2c7e8d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "requester-vpc-public-rt"
            },
            "tags_all": {
              "Name": "requester-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b7dcadd079b515"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_requester.aws_internet_gateway.igw",
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_requester",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d39fb29ec06a0e10",
            "route_table_id": "rtb-0b20f95b7d8f980ca",
            "subnet_id": "subnet-04b577a87dad500ea"
          },
          "dependencies": [
            "module.vpc_requester.aws_internet_gateway.igw",
            "module.vpc_requester.aws_route_table.public",
            "module.vpc_requester.aws_subnet.public_subnet",
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_requester",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:subnet/subnet-04b577a87dad500ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b577a87dad500ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537124953623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "requester-vpc-public"
            },
            "tags_all": {
              "Name": "requester-vpc-public"
            },
            "vpc_id": "vpc-0d9b7dcadd079b515"
          },
          "dependencies": [
            "module.vpc_requester.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_requester",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124953623:vpc/vpc-0d9b7dcadd079b515",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056c672a8e8479f2c",
            "default_route_table_id": "rtb-075e178cfb2e079ba",
            "default_security_group_id": "sg-05ec850c08154e457",
            "dhcp_options_id": "dopt-088afe2c2501c9162",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9b7dcadd079b515",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-075e178cfb2e079ba",
            "owner_id": "537124953623",
            "tags": {
              "Name": "requester-vpc"
            },
            "tags_all": {
              "Name": "requester-vpc"
            }
          }
        }
      ]
    }
  ]
}